Refactor ETL service to integrate Ollama with Mistral model, replacing OpenAI configuration. Updated environment variables, package dependencies, and README documentation. Adjusted data enrichment logic to utilize Ollama client. Removed OpenAI client code.

--- a/serverless-etl-genai/.env
+++ b/serverless-etl-genai/.env
@@ -1,5 +1,5 @@
 # MongoDB Configuration
-MONGODB_URI=mongodb://username:password@hostname:port/database
+MONGODB_URI=mongodb://localhost:27017/etl-genai
 
 # Ollama Configuration
 OLLAMA_ENDPOINT=http://localhost:11434/api/generate
