--- a/serverless-etl-genai/package.json
+++ b/serverless-etl-genai/package.json
@@ -2,12 +2,12 @@
   "name": "serverless-etl-genai",
   "version": "1.0.0",
   "description": "A serverless ETL service with Generative AI capabilities",
-  "main": "src/handlers/orchestratorHandler.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node src/handlers/orchestratorHandler.js",
+    "start": "node src/server.js",
     "test": "jest",
     "lint": "eslint .",
-    "dev": "nodemon local-dev.js",
+    "dev": "nodemon src/server.js",
     "local": "node local-dev.js",
     "deploy": "serverless deploy",
     "deploy:prod": "serverless deploy --stage prod",
@@ -15,18 +15,19 @@
     "coverage": "jest --coverage"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "dotenv": "^16.3.1",
-    "mongoose": "^8.0.2",
-    "openai": "^4.20.1",
-    "winston": "^3.11.0",
     "@azure/functions": "^3.5.1",
-    "@azure/storage-blob": "^12.17.0"
+    "@azure/storage-blob": "^12.17.0",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
+    "nodemon": "^3.1.9",
     "prettier": "^3.1.0",
     "serverless": "^3.38.0",
     "serverless-azure-functions": "^2.1.5",
@@ -38,8 +39,10 @@
     "etl",
     "generative-ai",
     "azure",
-    "mongodb"
+    "mongodb",
+    "ollama",
+    "mistral"
   ],
   "author": "",
   "license": "MIT"
-} 
+}
