--- a/serverless-etl-genai/package.json
+++ b/serverless-etl-genai/package.json
@@ -1,48 +1,38 @@
 {
   "name": "serverless-etl-genai",
   "version": "1.0.0",
-  "description": "A serverless ETL service with Generative AI capabilities",
+  "description": "A serverless ETL service with generative AI capabilities",
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "jest",
     "lint": "eslint .",
-    "dev": "nodemon src/server.js",
-    "local": "node local-dev.js",
-    "deploy": "serverless deploy",
-    "deploy:prod": "serverless deploy --stage prod",
-    "logs": "serverless logs -f orchestrator -t",
-    "coverage": "jest --coverage"
+    "format": "prettier --write .",
+    "deploy": "az functionapp deploy --resource-group serverless-etl-genai-rg --name serverless-etl-genai --src-path . --type node --runtime node:18",
+    "deploy:prod": "NODE_ENV=production npm run deploy"
   },
   "dependencies": {
-    "@azure/functions": "^3.5.1",
     "@azure/storage-blob": "^12.17.0",
-    "axios": "^1.6.2",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^8.0.2",
+    "express-rate-limit": "^7.1.5",
+    "mongoose": "^8.1.3",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.1.0",
-    "serverless": "^3.38.0",
-    "serverless-azure-functions": "^2.1.5",
-    "serverless-offline": "^13.3.0",
-    "supertest": "^6.3.3"
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.5"
   },
-  "keywords": [
-    "serverless",
-    "etl",
-    "generative-ai",
-    "azure",
-    "mongodb",
-    "ollama",
-    "mistral"
-  ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "author": "",
   "license": "MIT"
 }
