--- a/serverless-etl-genai/.env.example
+++ b/serverless-etl-genai/.env.example
@@ -19,6 +19,7 @@ AZURE_APP_NAME=serverless-etl-genai
 # Application Configuration
 NODE_ENV=development
 LOG_LEVEL=info
+PORT=3000
 
 # ETL Configuration
 ETL_BATCH_SIZE=100
@@ -27,4 +28,5 @@ ETL_RETRY_DELAY=1000
 
 # API Configuration
 API_KEY=your_api_key_here
+ADMIN_API_KEY=your_admin_api_key_here
 REQUIRE_AUTH=false 
