--- a/serverless-etl-genai/package.json
+++ b/serverless-etl-genai/package.json
@@ -16,6 +16,8 @@
     "@azure/storage-blob": "^12.17.0",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "csv-stringify": "^6.4.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
