--- a/package.json
+++ b/package.json
@@ -1,24 +1,44 @@
 {
+  "name": "serverless-etl-genai",
+  "version": "1.0.0",
+  "description": "A serverless ETL service with generative AI capabilities",
+  "main": "src/server.js",
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "jest",
+    "test:integration": "node tests/integration/test-etl.js",
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "deploy": "az functionapp deploy --resource-group serverless-etl-genai-rg --name serverless-etl-genai --src-path . --type node --runtime node:18",
+    "deploy:prod": "NODE_ENV=production npm run deploy"
+  },
   "dependencies": {
-    "@azure/functions": "^3.5.1",
     "@azure/storage-blob": "^12.17.0",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "csv-stringify": "^6.4.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.0.2",
-    "ollama": "^0.5.14",
-    "openai": "^4.20.1",
+    "express-rate-limit": "^7.1.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3",
+    "morgan": "^1.10.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "prettier": "^3.1.0",
-    "serverless": "^3.38.0",
-    "serverless-azure-functions": "^1.0.2",
-    "serverless-offline": "^13.3.0",
-    "supertest": "^6.3.3"
-  }
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "author": "",
+  "license": "MIT"
 }
