--- a/serverless.yml
+++ b/serverless.yml
@@ -1,19 +1,18 @@
 service: serverless-etl-genai
 
 provider:
-  name: azure
-  region: ${opt:region, 'East US'}
-  runtime: nodejs18.x
-  os: windows
+  name: google
+  runtime: nodejs22.x
+  region: us-central1
+  project: ${env:GCP_PROJECT_ID, 'serverless-etl-genai-project'}
+  credentials: ${env:GCP_CREDENTIALS, './service-account-key.json'}
   environment:
     MONGODB_URI: ${env:MONGODB_URI}
-    OPENAI_API_KEY: ${env:OPENAI_API_KEY}
-    AZURE_STORAGE_CONNECTION_STRING: ${env:AZURE_STORAGE_CONNECTION_STRING}
-    NODE_ENV: ${env:NODE_ENV, 'development'}
+    OLLAMA_ENDPOINT: ${env:OLLAMA_ENDPOINT, 'http://localhost:11434/api/generate'}
+    OLLAMA_MODEL: ${env:OLLAMA_MODEL, 'mistral'}
 
 plugins:
-  - serverless-azure-functions
-  - serverless-offline
+  - serverless-google-cloudfunctions
 
 package:
   exclude:
@@ -21,47 +20,28 @@ package:
     - .gitignore
     - .git/**
     - tests/**
-    - mock/**
     - docs/**
 
 functions:
   extract:
-    handler: src/handlers/extractHandler.extract
+    handler: extract
     events:
-      - http:
-          method: GET
-          path: /extract
-          cors: true
+      - http: extract
 
   transform:
-    handler: src/handlers/transformHandler.transform
+    handler: transform
     events:
-      - http:
-          method: POST
-          path: /transform
-          cors: true
+      - http: transform
 
   load:
-    handler: src/handlers/loadHandler.load
+    handler: load
     events:
-      - http:
-          method: POST
-          path: /load
-          cors: true
+      - http: load
 
   orchestrator:
-    handler: src/handlers/orchestratorHandler.orchestrate
+    handler: orchestrate
     events:
-      - http:
-          method: POST
-          path: /orchestrate
-          cors: true
-      - timer:
-          schedule: 0 */1 * * * *  # Run every hour
-
-custom:
-  azure:
-    subscriptionId: ${env:AZURE_SUBSCRIPTION_ID}
-    resourceGroup: ${env:AZURE_RESOURCE_GROUP, 'serverless-etl-genai-rg'}
-    appName: ${env:AZURE_APP_NAME, 'serverless-etl-genai'}
-    stage: ${opt:stage, 'dev'} 
+      - http: orchestrate
+      - event:
+          eventType: providers/cloud.pubsub/eventTypes/topic.publish
+          resource: projects/${self:provider.project}/topics/etl-hourly-trigger 
