Update package.json scripts for ETL dashboard backup, adjust CORS origins, and simplify server startup logic. Enhance logging to include MongoDB connection and available endpoints.

--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "start:all": "concurrently \"npm run start\" \"npm run dev\"",
-    "start:frontend": "cd etl-dashboard && npm start",
-    "dev": "cd etl-dashboard && npm run dev",
-    "dev:all": "concurrently \"npm run start\" \"npm run dev\"",
+    "start:all": "concurrently \"npm run start\" \"npm run dev:frontend\"",
+    "start:frontend": "cd etl-dashboard-backup/etl-dashboard && npm start",
+    "dev": "cd etl-dashboard-backup/etl-dashboard && npm run dev",
+    "dev:all": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "cd . && node src/server.js",
-    "dev:frontend": "cd etl-dashboard && npm run dev",
+    "dev:frontend": "cd etl-dashboard-backup/etl-dashboard && npm run dev",
     "test": "jest",
     "test:integration": "node tests/integration/test-etl.js",
     "test:etl": "node tests/run-etl-tests.js",
     "test:generate-data": "node tests/generate-test-data.js",
     "test:backend-etl": "node tests/backend-etl-test.js",
     "fix:auth": "node fix-auth.js",
-    "fix:port": "node fix-port.js",
+    "fix:port": "node fix-ports.js",
     "fix:server": "node fix-server.js",
     "fix:env": "node fix-env.js",
     "lint": "eslint .",
